[package]
name = "random-man"
version = "0.1.0"
authors = ["Heng <henghuang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
rand = "0.7"
cgmath = { version = "0.17", features = ["mint"]}
